--- a/CSSWeb.CSS
+++ b/CSSWeb.CSS
@@ -106,3 +106,9 @@ a{
 table, td, th{
 	border: .5px solid black;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
